# libusb_android

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: dart.yml  publish.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/scavanger/libusb_android/libusb_android_example/: MainActivity.kt
example/lib/: main.dart
lib/: libusb_android.dart  libusb_android_bindings.dart  libusb_base.dart
src/: CMakeLists.txt
